--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "fetch": "^1.1.0",
+    "formidable": "^1.2.2",
     "http": "0.0.1-security",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "pg": "^8.2.1",
+    "pg-promise": "^10.5.7",
+    "yarn-install": "^1.0.0"
   }
 }
